CSS Coad Learning

--- a/css/ExternalCSSuse_in_html.html
+++ b/css/ExternalCSSuse_in_html.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Index</h1>
+    <h1>External CSS use in Html with link tag</h1>
+    <link rel="stylesheet" href="/css/ExternalCSS.css">
 </body>
 </html>
