--- a/css/InternalORembeded.html
+++ b/css/InternalORembeded.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Internal or Embeded CSS</title>
+
+    <Style>
+        h1 {
+            color: aquamarine;
+            background-color: black;
+        }   
+    </Style>
+
+
 </head>
 <body>
-    <h1>Hello Index</h1>
+    <h1>CSS using Internal or Embeded Style in Head tag</h1>
 </body>
 </html>
