--- a/css/inlineCSS.html
+++ b/css/inlineCSS.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>InlineCSS</title>
 </head>
 <body>
-    <h1>Hello Index</h1>
+    <H1 style="color: blueviolet;background-color: black;">Hello It`s inline CSS with Style attribute inline in tag</H1>
+    
 </body>
 </html>
